# CVLCore

./: .gitignore  CHANGELOG  Cargo.toml  Dockerfile  README.md  build-docker.sh  crates.js  help.html  index.html  mac-configure.sh  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: docs.yml  master.yml  pull-request.yml  release.yml  rust.yml
cvlcore/: all.html  constant.ANY_2_DIM_IMAGE.html  constant.BGR_CV_IMAGE.html  fn.calculate_mat_median.html  fn.compute_statistic.html  fn.compute_vibration.html  fn.gen_abs_frame.html  fn.gen_abs_frame_reduce.html  fn.gen_canny_frame.html  fn.gen_canny_frame_by_sigma.html  fn.gen_distribution_frame.html  fn.gen_grayscale_frame.html  fn.gen_threshold_frame.html  index.html  sidebar-items.js
cvlcore/api/: index.html  sidebar-items.js
cvlcore/api/capture/: enum.StreamSource.html  index.html  sidebar-items.js  struct.CvlCapture.html
cvlcore/api/chain/: index.html  sidebar-items.js  struct.ChainProcessing.html  struct.ProcessingSettings.html
cvlcore/core/: index.html  sidebar-items.js
cvlcore/core/bounds/: constant.BLACK_COLOR.html  index.html  (+6 more)
cvlcore/errors/: enum.CaptureError.html  enum.ProcessingError.html  enum.ReadFrameError.html  index.html  sidebar-items.js  type.CaptureResult.html  type.ChainResult.html  type.ProcessingResult.html  type.ReadFrameResult.html
cvlcore/ui/: index.html  sidebar-items.js
examples/: compute_statistic.rs  file_example.rs  rtsp_example.rs  simple_using.rs  web_cam_example.rs
src/: errors.rs  lib.rs  main.rs  ui.rs
src/api/: capture.rs  chain.rs  mod.rs
src/core/: bounds.rs  colors.rs  cvl.rs  deque.rs  mat.rs  mod.rs  statistic.rs
src/cvlcore/: errors.rs.html  lib.rs.html
src/ui/: window.rs
test/: benchmarks.rs  test_api.rs  test_deque.rs  test_lib.rs  tests.rs
(+38 files in other folders)
