[package]
name = "cvlcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
opencv = "0.84.5"
thiserror = "1.0.47"

[[example]]
name = "web_cam_example"

[[example]]
name = "file_example"

[[test]]
name = "main_tests"
path = "test/tests.rs"

[[bench]]
name = "main_benchmarks"
path = "test/benchmarks.rs"
