[package]
name = "cvlcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "^0.15"
opencv = "^0.83"
thiserror = "^1.0"

[build-dependencies]
cbindgen = "^0.24"

name = "file_example"

[[example]]
name = "web_cam_example"

[[example]]
name = "rtsp_example"

[[test]]
name = "test_lib"
path = "test/test_lib.rs"

[[test]]
name = "test_api"
path = "test/test_api.rs"

[[test]]
name = "test_deque"
path = "test/test_deque.rs"

[[bench]]
name = "main_benchmarks"
path = "test/benchmarks.rs"
