[package]
name = "cvlcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.16.1"
opencv = "0.93.4"
thiserror = "2.0.3"

[build-dependencies]
cbindgen = "0.27.0"

[[example]]
name = "file_example"

[[example]]
name = "web_cam_example"

[[example]]
name = "rtsp_example"

[[example]]
name = "compute_statistic"

[[test]]
name = "test_lib"
path = "test/test_lib.rs"

[[test]]
name = "test_api"
path = "test/test_api.rs"

[[test]]
name = "test_deque"
path = "test/test_deque.rs"

[[bench]]
name = "main_benchmarks"
path = "test/benchmarks.rs"
